# lazyv2ex

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: action.rs  api.rs  app.rs  main.rs  model.rs  models.rs  rss.rs  time.rs
src/pages/: detail.rs  home.rs  mod.rs
src/ui/: action.rs  dispatcher.rs  mod.rs  render.rs  store.rs
