[package]
name = "lazyv2ex"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", features = ["unstable"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
rss = { version = "2.0", features = ["atom"] }
chrono = "0.4"
quick-xml = "0.31"
atom_syndication = "0.12.6"
scraper = "0.18.1"
open = "5.0"
